--- a/LinkedListClass/VV.DataStructure.LinkedList.csproj
+++ b/LinkedListClass/VV.DataStructure.LinkedList.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+	
+  <ItemGroup>
+	  <InternalsVisibleTo Include ="VV.DataStructure.LinkedList.Tests"/>
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Resources\LinkedListRes.Designer.cs">
